--- a/systemQuota.ejs
+++ b/systemQuota.ejs
@@ -116,8 +116,8 @@
 	<tr>
 		<td style="border-right:3px #CFAA9E solid; border-top:3px #CFAA9E solid;  width: 14%;">國際專修部<br/>教育部核定名額</td>
 		<td class="bachelor" style="border-right:3px #CFAA9E solid; border-top:3px #CFAA9E solid;"><input class="form-control" type="number" id="bachelor_IFP_quota" disabled></td>
-		<td class="master diagonalCrossRight" style="border-right:3px #CFAA9E solid; border-top:3px #CFAA9E solid;"><!-- <input class="form-control" type="number" id="master_IFP_quota" disabled> --></td>
-		<td class="phd diagonalCrossRight" style="border-right:3px #CFAA9E solid; border-top:3px #CFAA9E solid;"><!-- <input class="form-control" type="number" id="phd_IFP_quota" disabled> --></td>
+		<td class="master crossed" style="border-right:3px #CFAA9E solid; border-top:3px #CFAA9E solid;"><!-- <input class="form-control" type="number" id="master_IFP_quota" disabled> --></td>
+		<td class="phd crossed" style="border-right:3px #CFAA9E solid; border-top:3px #CFAA9E solid;"><!-- <input class="form-control" type="number" id="phd_IFP_quota" disabled> --></td>
 		<td style="border-top:3px #CFAA9E solid;"></td>
 	</tr>
 </table>
@@ -133,7 +133,7 @@
 		</div>
 		<div id="collapseExample" class="collapse" aria-labelledby="heading" data-parent="#accordion">
 			<div class="card-body">
-				<table id="fixed_quota_table" style="border:4px #622fa5 solid;" cellpadding="10" border='1' align="center">
+				<table style="border:4px #622fa5 solid;" cellpadding="10" border='1' align="center">
 					<tr>
 						<th style="border-right:3px #622fa5 solid; background: linear-gradient(to top right, #fff calc(50% - 2px), #622fa5 , #fff calc(50% + 1px) )">
 							<a class="key-right">班別</a>
@@ -170,7 +170,7 @@
 					</tr>
 				</table>
 				<br/>
-				<table id="input_quota_table" style="border:4px #CFAA9E solid; width: 100%;" cellpadding="12" border='2'>
+				<table style="border:4px #CFAA9E solid; width: 100%;" cellpadding="12" border='2'>
 					<tr>
 						<th style="border-right:3px #CFAA9E solid; width: 21%; background: linear-gradient(to top right, #fff calc(50% - 2px), #CFAA9E , #fff calc(50% + 2px) )" colspan="2">
 							<a class="key-right">班別</a>
@@ -229,8 +229,8 @@
 					<tr>
 						<td style="border-right:3px #CFAA9E solid; border-top:3px #CFAA9E solid;  width: 14%;">國際專修部<br/>教育部核定名額</td>
 						<td style="border-right:3px #CFAA9E solid; border-top:3px #CFAA9E solid;"><input class="form-control" type="number" min="0" value="50" disabled></td>
-						<td class="diagonalCrossRight" style="border-right:3px #CFAA9E solid; border-top:3px #CFAA9E solid;"><!-- <input class="form-control" type="number" id="master_IFP_quota" disabled> --></td>
-						<td class="diagonalCrossRight" style="border-right:3px #CFAA9E solid; border-top:3px #CFAA9E solid;"><!-- <input class="form-control" type="number" id="phd_IFP_quota" disabled> --></td>
+						<td class="diagonalCrossRight" style="border-right:3px #CFAA9E solid; border-top:3px #CFAA9E solid;"><!-- <input class="form-control" type="number" disabled> --></td>
+						<td class="diagonalCrossRight" style="border-right:3px #CFAA9E solid; border-top:3px #CFAA9E solid;"><!-- <input class="form-control" type="number" disabled> --></td>
 						<td style="border-top:3px #CFAA9E solid;">依教育部 OOOOOOOOB 函核定</td>
 					</tr>
 				</table>
